fixed: unable to truncate the text in  course list card in responsive mode (#362)
* fixed: added badge in responsive nav

* fixed the setting page scroll issue

* fixed the overlap text issue

--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -540,6 +540,7 @@
           padding: 0;
           text-overflow: ellipsis;
           overflow: hidden;
+          white-space: nowrap;
           width: calc(100vw - 200px);
           padding: 0px 10px;
           -webkit-line-clamp: 1;
